[tool.poetry]
name = "loading-programs"
version = "0.1.0"
description = "Matrix Data Analysis Tool"
authors = ["İbrahim Hakkı Ergin <iergin@student.42istanbul.com.tr>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.25.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
